--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -4,14 +4,23 @@
   font-weight: bold;
 }
 .servicesContainerBg {
-  background: url(../../assets/images/Services-bg.svg);
+  /* background: url(../../assets/images/Services-bg.svg); */
   background-repeat: no-repeat;
   background-size: cover;
   padding: 200px 0 50px;
   width: 100%;
   height: 100%;
   margin-top: 30px;
-  /* background-color: ; */
+  background-color: #f3f2f8;
+  position: relative
+}
+.shapeContainer{
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.shapeContainer svg{
+  fill: var(--white);
 }
 .serviceCard {
   background: var(--white);
@@ -110,12 +119,13 @@
   box-shadow: none;
 }
 .accordionCard [class~="accordion-header"] button::after{
-  /* background-color: var(--primary); */
+  background-image: url(../../assets/images/up_icon.svg);  
+  background-color: var(--primary);
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  /* background-image: url(../../assets/images/up_icon.svg);   */
-  /* fill: #fff; */
+  background-size: initial;
+  background-position: center;
 }
 .accordionCard [class~="accordion-header"] button:focus{
   border: none;
@@ -123,4 +133,51 @@
 }
 .workflowWrapper{
   padding: 100px 0;
+}
+.workflowWrapper{
+  background-image: url(../../assets/images/workFLowBg.svg);
+  background-position: top right;
+  background-repeat: no-repeat;
+}
+.workCard{
+  margin: 5px;
+  text-align: center;
+  transition: all 0.3s linear;
+  background-color: transparent;
+  border: none;
+}
+
+.workCard:hover{
+  box-shadow: 8px 8px 30px 0 rgb(42 67 113 / 15%);
+  background-color: var(--white);
+}
+
+.workCard [class~='card-title']{
+  font-size: 22px;
+  line-height: 1.2;
+  margin: 10px 0;
+  color: #1a1b1e;
+  font-family: "Red Hat Display", sans-serif;
+}
+.titleParagraph{
+  color: var(--light-black);
+  font-size: 16px;
+}
+.whatWeDoWrapper{
+  padding: 80px 0;
+}
+.weDoSliderBox{
+  position: relative;
+}
+.weDoSliderImage{
+  border-radius: 15px;
+}
+.weDoInfoBox{
+  width: 270px;
+  position: absolute;
+  bottom: 20px;
+  right: -270px;
+  z-index: 4;
+  opacity: 0;
+  transition: all 0.35s ease;
 }
