--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -12,14 +12,14 @@
   height: 100%;
   margin-top: 30px;
   background-color: #f3f2f8;
-  position: relative
+  position: relative;
 }
-.shapeContainer{
+.shapeContainer {
   position: absolute;
   top: 0;
   width: 100%;
 }
-.shapeContainer svg{
+.shapeContainer svg {
   fill: var(--white);
 }
 .serviceCard {
@@ -75,10 +75,10 @@
   justify-content: space-between;
   align-items: center;
 }
-.serviceAction:hover{
+.serviceAction:hover {
   background: var(--secondary);
 }
-.serviceAction:focus{
+.serviceAction:focus {
   box-shadow: none;
   border: none;
 }
@@ -118,8 +118,8 @@
   font-weight: 500;
   box-shadow: none;
 }
-.accordionCard [class~="accordion-header"] button::after{
-  background-image: url(../../assets/images/up_icon.svg);  
+.accordionCard [class~="accordion-header"] button::after {
+  background-image: url(../../assets/images/up_icon.svg);
   background-color: var(--primary);
   border-radius: 50%;
   width: 30px;
@@ -127,19 +127,19 @@
   background-size: initial;
   background-position: center;
 }
-.accordionCard [class~="accordion-header"] button:focus{
+.accordionCard [class~="accordion-header"] button:focus {
   border: none;
   box-shadow: none;
 }
-.workflowWrapper{
+.workflowWrapper {
   padding: 100px 0;
 }
-.workflowWrapper{
+.workflowWrapper {
   background-image: url(../../assets/images/workFLowBg.svg);
   background-position: top right;
   background-repeat: no-repeat;
 }
-.workCard{
+.workCard {
   margin: 5px;
   text-align: center;
   transition: all 0.3s linear;
@@ -147,55 +147,237 @@
   border: none;
 }
 
-.workCard:hover{
+.workCard:hover {
   box-shadow: 8px 8px 30px 0 rgb(42 67 113 / 15%);
   background-color: var(--white);
 }
 
-.workCard [class~='card-title']{
+.workCard [class~="card-title"] {
   font-size: 22px;
   line-height: 1.2;
   margin: 10px 0;
   color: #1a1b1e;
   font-family: "Red Hat Display", sans-serif;
 }
-.titleParagraph{
+.titleParagraph {
   color: var(--light-black);
   font-size: 16px;
 }
-.whatWeDoWrapper{
-  padding: 80px 0;
-}
-.weDoSliderBox{
+.whatWeDoWrapper {
+  padding: 80px 0 130px;
   position: relative;
 }
-.weDoSliderImage{
+.weDoSliderBox {
+  position: relative;
+}
+.weDoSliderImage {
   border-radius: 15px;
 }
-.weDoInfoBox{
+.weDoInfoBox {
   width: 270px;
   position: absolute;
-  bottom: 20px;
-  right: -270px;
+  /* bottom: 20px;
+  right: -270px; */
+  bottom: -270px;
+  right: 0px;
   z-index: 4;
   opacity: 0;
   transition: all 0.35s ease;
 }
-.weDoSliderBox:hover .weDoInfoBox{
+.weDoSliderBox:hover .weDoInfoBox {
   right: 62px;
   opacity: 1;
+  bottom: 25px;
 }
-.weDoInfoInfoInner{
+.weDoInfoInfoInner {
   background-color: var(--primary);
   color: var(--white);
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   padding: 10px;
 }
-.weDoInfoInfoInner h5{
+.weDoInfoInfoInner h5 {
   font-size: 22px;
 }
-.weDoInfoInfoInner p{
+.weDoInfoInfoInner p {
   font-size: 14px;
   margin-bottom: 0;
+}
+.slick-slide.slick-active {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+.whatweDoSlider [class~="slick-dots"] {
+  margin-bottom: 20px;
+  bottom: -70px;
+}
+.whatweDoSlider [class~="slick-dots"] li button:before {
+  font-size: 18px;
+  color: var(--primary-10);
+  opacity: 1;
+}
+.whatweDoSlider [class~="slick-dots"] li[class~="slick-active"] button:before {
+  color: var(--primary);
+}
+.whatweDoSliderControl {
+  display: flex;
+  justify-content: flex-end;
+}
+.whatweDoSliderControl button{
+  border-radius: 50%;
+  font-size: 28px;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  border: none;
+}
+.whatweDoSliderControl button:nth-child(1) {
+  background-color: var(--light-black);
+}
+.whatweDoSliderControl button:nth-child(2) {
+  background-color: var(--primary);
+}
+.whatweDoSliderControl [class~="slick-arrow"]{
+  display: none !important;
+}
+.testimonialWrapper {
+  background-image: url(../../assets/images/testimonialBg.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+.clientTestimonialTitle h3 {
+  color: var(--white);
+}
+.clientTestimonialCard {
+  border-radius: 10px;
+  border: none;
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+  min-height: 300px;
+}
+.clientTestimonialCard::after {
+  content: "";
+  background-image: url(../../assets/images/testimonialCardBg.svg);
+  position: absolute;
+  left: -30px;
+  background-size: cover;
+  height: 88%;
+  width: 30%;
+  border-radius: 10px !important;
+  margin: 10px;
+}
+.clientTestimonialCard::before {
+  content: "";
+  background-image: url(../../assets/images/testimonialCardBg.svg);
+  position: absolute;
+  right: -30px;
+  background-size: cover;
+  height: 88%;
+  width: 30%;
+  border-radius: 10px !important;
+  margin: 10px;
+}
+.clientTestimonialCard [class~="card-body"] {
+  padding: 25px;
+}
+.testimonialCardHeader {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.clientDetail {
+  margin-left: 20px;
+}
+.clientDetail h5 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 0;
+  color: var(--secondary);
+}
+.clientDetail p {
+  color: var(--light-black);
+  margin-bottom: 0;
+  font-size: 18px;
+}
+.clientProfileBox {
+  display: flex;
+  align-items: center;
+}
+.clientFeedbackBox{
+  color: var(--light-black);
+  font-size: 16px;
+  line-height: 30px;
+}
+.clientTestimonialSliderControl{
+  display: flex;
+}
+.clientTestimonialSliderControl button{
+  border-radius: 50%;
+  font-size: 28px;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
+  border: 1px solid var(--white);
+  background-color: transparent;
+}
+.clientTestimonialSlider [class~="slick-dots"] {
+  margin-bottom: 20px;
+  bottom: -70px;
+}
+.clientTestimonialSlider [class~="slick-dots"] li button:before {
+  font-size: 18px;
+  color: var(--primary-10);
+  opacity: .25;
+}
+.clientTestimonialSlider [class~="slick-dots"] li[class~="slick-active"] button:before {
+  color: var(--primary-10);
+  opacity: 1;
+}
+.clientTestimonialSlider [class~="slick-arrow"]{
+  display: none !important;
+}
+.whyUsContainer{
+  padding: 100px 0;
+}
+.whyusTitle h3{
+  margin-bottom: 0;
+}
+
+.carouseItemContainer{
+  padding: 100px 0 100px 0;
+  
+}
+.carouseItemContainer:after{
+  background-image: url(../../assets/images/yuva-home-banner.png);
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+  background-position: right;
+  background-size: cover;
+  width: 50%;
+  content: "";
+}
+.carouseItemContainer1{
+  background-image: url(../../assets/images/yuva-home-banner-2.png);
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+  padding: 100px 0 100px 0;
+  background-position: right;
+  background-size: contain;
+}
+.carouseItemContainer2{
+  background-image: url(../../assets/images/yuva-home-banner-3.png);
+  background-repeat: no-repeat;
+  margin-bottom: 0;
+  padding: 100px 0 100px 0;
+  background-position: right;
+  background-size: contain;
 }
