--- a/components/common/Footer/Footer.module.css
+++ b/components/common/Footer/Footer.module.css
@@ -10,8 +10,9 @@
     flex-direction: row;
     padding: 30px 20px;
     border-radius: 10px;
-    box-shadow: 8px 8px 30px 0px rgba(42,67,113,0.15);
+    box-shadow: 0px 4px 15px 0px rgba(42,67,113,0.10);
     border: none;
+    margin: 2rem 1rem;
 }
 .reviewsWrapper .reviewCard .reviewLogo img {
     max-width: 70px !important;
@@ -32,6 +33,9 @@
 }
 .reviewsWrapper .reviewCard .reviewContent img {
     max-width: 120px !important;
+}
+.reviewCardSlider [class~=slick-arrow] {
+    display: none !important;
 }
 
 /* Footer */
@@ -104,10 +108,11 @@
     content: none;
 }
 .footerWrapper .addressList .addressTitle {
+    font-family: var(--secondary-font);
     font-size: 24px;
     font-weight: bold;
     color: var(--white);
-    margin-top: 25px;
+    margin-top: 20px;
     margin-bottom: 0px;
 }
 
@@ -158,6 +163,11 @@
 }
 
 /* Responsive */
+@media screen and (max-width: 991px) {
+    .reviewsWrapper .reviewCard {
+        margin-bottom: 1.5rem;
+    }
+}
 @media screen and (max-width: 767px) {
     .footerWrapper .addressList {
         flex-direction: column;
