--- a/components/common/Header/Header.module.css
+++ b/components/common/Header/Header.module.css
@@ -1,23 +1,30 @@
 .HeaderPrimary {
-    box-shadow: 4px 4px 30px 0px rgba(42, 67, 113, 0.15);
-    background: var(--white);
-    padding: 20px 0px;
-  }
-  
+  box-shadow: 4px 4px 30px 0px rgba(42, 67, 113, 0.15);
+  background: var(--white);
+  padding: 20px 0px;
+}
+
+.logo img {
+  max-width: 270px !important;
+}
+
+.HeaderPrimary [class~="navbar-nav"] [class~="nav-link"] {
+  font-size: 18px;
+  color: #333333;
+  padding: 0px;
+  font-weight: 600;
+}
+.HeaderPrimary [class~="navbar-nav"] [class~="nav-link"]:not(:last-child) {
+  padding-right: 30px;
+}
+.HeaderPrimary [class~="navbar-nav"] [class~="nav-link"] [class~="active"] {
+  color: var(--primary);
+}
+
+
+/* Responsive CSS */
+@media screen and (max-width: 767px) {
   .logo img {
-    max-width: 270px !important;
+    max-width: 170px !important;
   }
-  
-  .HeaderPrimary [class~="navbar-nav"] [class~="nav-link"] {
-    font-size: 18px;
-    color: #333333;
-    padding: 0px;
-    font-weight: 600;
-  }
-  .HeaderPrimary [class~="navbar-nav"] [class~="nav-link"]:not(:last-child) {
-    padding-right: 30px;
-  }
-  .HeaderPrimary [class~="navbar-nav"] [class~="nav-link"] [class~="active"] {
-    color: var(--primary);
-  }
-  
+}
