Home page designing

--- a/components/common/Header/Header.module.css
+++ b/components/common/Header/Header.module.css
@@ -21,7 +21,9 @@
 .HeaderPrimary [class~="navbar-nav"] a.active {
   color: var(--primary);
 }
-
+.abc{
+  display: none;
+}
 
 /* Responsive CSS */
 @media screen and (max-width: 767px) {
