--- a/components/Services/Services.module.scss
+++ b/components/Services/Services.module.scss
@@ -1,11 +1,11 @@
 .serviceWrapper {
-    max-width: 75%;
-    margin: 50px auto -250px;
+    // max-width: 75%;
+    // margin: 50px auto -250px;
     position: relative;
     z-index: 1;
     background-image: linear-gradient(145deg,#f02334 47%,#ff3b4b 100%);
-    border-radius: 15px;
-    padding: 110px 20px 90px 20px;
+    border-radius: 0px;
+    padding: 110px 0px;
     .serviceHead {
         [class~=themeTitle] {
             h3 {
@@ -42,10 +42,10 @@
     }
     .serviceCategoryList {
         list-style: none;
-        // display: flex;
-        // align-items: center;
         padding: 0;
         margin: 40px 0px 0px;
+        // display: flex;
+        // align-items: center;
         // overflow-x: auto;
         // &::-webkit-scrollbar {
         //     display: none;
@@ -64,36 +64,70 @@
                 right: 80px;
             }
         }
-        [class~=slick-slide] {
-            margin: 0px 15px;
+        [class~=slick-dots] {
+            bottom: -40px;
             li {
-                a {
-                    border: 1px solid rgba(255, 255, 255, 0.25);
-                    padding: 30px 15px 15px;
-                    border-radius: 15px;
-                    transition: all 0.3s linear;
-                    text-align: center;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    gap: 20px;
-                    text-decoration: none;
-                    min-width: 200px;
-                    min-height: 170px;
-                    .icon {
-                        width: 30px;
-                        height: 30px;
+                button {
+                    &::before {
                         color: var(--white);
                     }
-                    .serviceTitle {
-                        font-size: 20px;
-                        color: var(--white);
-                    }
-                    &:hover {
-                        background: var(--white);
-                        .serviceTitle {
-                            color: var(--secondary);
+                }
+                &.active {
+                    button {
+                        &::before {
+                            color: var(--white);
                         }
+                    }
+                }
+            }
+        }
+        [class~=slick-slide] {
+            // margin: 0px 15px;
+            a {
+                border: 1px solid rgba(255, 255, 255, 0.25);
+                padding: 30px 15px 15px;
+                border-radius: 15px;
+                transition: all 0.3s linear;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+                text-decoration: none;
+                min-width: 200px;
+                min-height: 185px;
+                margin-right: 24px;
+                .icon {
+                    width: 30px;
+                    height: 30px;
+                    color: var(--white);
+                }
+                .serviceTitle {
+                    font-size: 20px;
+                    color: var(--white);
+                }
+                &:hover {
+                    background: var(--white);
+                    .serviceTitle {
+                        color: var(--secondary);
+                    }
+                }
+                img {
+                    width: 55px !important;
+                    height: 55px !important;
+                }
+                .activeIcon {
+                    display: none;
+                }
+                .inactiveIcon {
+                    display: block;
+                }
+                &:hover {
+                    .activeIcon {
+                        display: block;
+                    }
+                    .inactiveIcon {
+                        display: none;
                     }
                 }
             }
@@ -103,7 +137,7 @@
 
 .serviceDetailWrapper {
     background-color: var(--bg-secondary);
-    padding-top: 300px;
+    padding-top: 100px;
     p {
         font-size: 15px;
         line-height: 25px;
