--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -354,6 +354,9 @@
 .whyusTitle h3 {
   margin-bottom: 0;
 }
+.whyUsContainer [class~=CircularProgressbar] [class~=CircularProgressbar-path] {
+  stroke: var(--primary);
+}
 
 .carouseItemContainer {
   /* padding: 140px 0 140px 0; */
