teams page design changes

--- a/components/Services/Services.module.scss
+++ b/components/Services/Services.module.scss
@@ -109,6 +109,7 @@
                 min-width: 200px;
                 min-height: 185px;
                 margin-right: 24px;
+                background: #ffffff1c;
                 .icon {
                     width: 30px;
                     height: 30px;
