--- a/components/Teams/Teams.module.scss
+++ b/components/Teams/Teams.module.scss
@@ -144,13 +144,13 @@
                     display: block;
                     color: #fff;
                 }
-                .facebook {
+                &.facebook {
                     background-color: #3b5998;
                 }
-                .twitter {
+                &.twitter {
                     background-color: #15b7ec;
                 }
-                .linkedin {
+                &.linkedin {
                     background-color: #0077b5;
                 }
             }
