--- a/components/Contact/Contact.module.scss
+++ b/components/Contact/Contact.module.scss
@@ -1,17 +1,23 @@
 .contactWrapper {
-  padding: 100px 0;
+  padding: 100px 0 0;
+
   .ourContact {
-    padding: 60px;
-    background-image: linear-gradient(
-      90deg,
-      rgba(240, 35, 52, 1) 0%,
-      rgba(255, 59, 75, 1) 100%
-    );
+    padding: 30px 60px 30px;
+    background-image: url(../../assets/images/testimonialBg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    // background-image: linear-gradient(90deg,
+    //     rgba(240, 35, 52, 1) 0%,
+    //     rgba(255, 59, 75, 1) 100%);
     border-radius: 15px;
     margin-right: 30px;
     margin-left: 30px;
-    box-shadow: 18px 18px 40px 0px rgba(2, 156, 236, 0.3);
+    box-shadow: 18px 18px 40px 0px rgba(240, 35, 52, .30);
     color: var(--white);
+    margin-bottom: -30px;
+    position: relative;
+    z-index: 2;
+
     h6 {
       font-size: 14px;
       font-weight: bold;
@@ -22,6 +28,7 @@
       letter-spacing: 1px;
       margin-bottom: 15px;
       text-transform: uppercase;
+
       &:after {
         background: var(--white);
         position: absolute;
@@ -33,31 +40,95 @@
         border-radius: 50%;
       }
     }
+
     h2 {
       font-weight: 700;
       text-transform: capitalize;
     }
-    .contactInfo{
+
+    .contactInfo {
       display: flex;
       margin-bottom: 15px;
-      .contactIcons{
+
+      .contactIcons {
         font-size: 30px;
         min-width: 30px;
       }
-      .infoText{
+
+      .infoText {
         padding-left: 20px;
-        font-weight: 500;        
+        font-weight: 500;
+
         h6 {
           padding: 0;
           line-height: 0;
+
           &:after {
             display: none;
           }
         }
-        p{
+
+        p {
           font-size: 20px;
         }
       }
     }
+  }
+
+  .contactFormWrappper {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    h6 {
+      text-transform: capitalize;
+      font-size: 24px;
+      font-weight: bold;
+      color: #1a1b1e;
+      position: relative;
+      display: inline-block;      
+      letter-spacing: 1px;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: bold;
+      padding-left: 21px;
+      color: #a5b7d2;
+      text-transform: capitalize;
+      position: relative;
+      &::before{
+        content: "";
+        position: absolute;
+        width: 7px;
+        height: 7px;
+        background: #a5b7d2;
+        left: 0px;
+        z-index: 999999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 10px;
+        border-radius: 50%;
+      }
+    }
+
+    .contactForm {
+      [class~="form-control"] {
+        font-size: 16px;
+        color: #7e7e7e;
+        border-radius: 20px;
+
+        &::placeholder {
+          color: #7e7e7e;
+        }
+      }
+    }
+
+  }
+
+  .mapContainer {
+    height: 400px;
   }
 }
