--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -7,7 +7,8 @@
   /* background: url(../../assets/images/Services-bg.svg); */
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 200px 0 50px;
+  /* padding: 200px 0 50px; */
+  padding: 100px 0 50px;
   width: 100%;
   height: 100%;
   margin-top: 30px;
