--- a/components/common/Header/Header.module.css
+++ b/components/common/Header/Header.module.css
@@ -21,10 +21,51 @@
 .HeaderPrimary [class~="navbar-nav"] a.active {
   color: var(--primary);
 }
-.abc{
-  display: none;
-}
 
+.topHeader{
+  background-color: var(--primary);
+  padding: 10px;
+}
+.topHeader a{
+  color: var(--white);
+  text-decoration: none;
+}
+.topHeader ul{
+  list-style: none;
+  padding: 0 0 0 10px;
+  display: flex;
+  margin: 0;
+  border-left: 1px solid rgba(255,255,255,.3);
+}
+.headerMenu{
+  margin-right: 10px;
+}
+.topHeader ul li{
+  width: 30px;
+    display: flex;
+    align-items: center;
+    margin: 0 5px;
+    background: var(--white);
+    border-radius: 50%;
+    padding: 7px;
+}
+.topHeaderleft{
+  display: flex;
+  align-items: center;
+}
+.topHeaderRight{
+  display: flex;
+  color: var(--white);
+}
+.menuBox{
+  margin: 0 15px;
+  display: flex;
+  align-items: center;
+}
+.Icon{
+  font-size: 18px;
+  margin-right: 10px;
+}
 /* Responsive CSS */
 @media screen and (max-width: 767px) {
   .logo img {
