--- a/components/Portfolio/Portfolio.module.scss
+++ b/components/Portfolio/Portfolio.module.scss
@@ -109,3 +109,80 @@
         }
     }
 }
+
+// Portfolio detail page
+.portfolioDetailsWrapper {
+    p {
+        font-family: var(--primary-font);
+        color: var(--light-black);
+        font-size: 15px;
+        line-height: 30px;
+    }
+    .detailBigBanner {
+        padding: 100px 0px 50px;
+        position: relative;
+        z-index: -1;
+        img {
+            border-radius: 25px;
+        }
+    }
+    .projectTitle {
+        font-size: 30px;
+        font-weight: 600;
+        font-family: var(--primary-font);
+        margin-bottom: 20px;
+    }
+    .details {
+        font-family: var(--primary-font);
+        color: var(--light-black);
+        font-size: 15px;
+        line-height: 30px;
+    }
+    .detailCard {
+        background: var(--primary);
+        padding: 30px;
+        color: var(--white);
+        z-index: 2;
+        font-family: var(--primary-font);
+        h4 {
+            font-size: 26px;
+            font-family: var(--secondary-font);
+            font-weight: 600;
+            margin-bottom: 25px;
+            margin-top: 15px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            li {
+                margin-bottom: 30px;
+                padding-bottom: 10px;
+                border-bottom: 1px solid rgba(255,255,255,0.3);
+                span {
+                    font-size: 14px;
+                    display: block;
+                    font-weight: 400;
+                    margin-bottom: 7px;
+                }
+                h5 {
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+    .projectGallery {
+        margin: 50px 0px;
+        img {
+            border-radius: 5px;
+        }
+    }
+    .summaryCard {
+        padding-bottom: 50px;
+        .summaryTitle {
+            font-size: 30px;
+            font-weight: bold;
+            font-family: var(--primary-font);
+        }
+    }
+}
