footer icon changes

--- a/components/common/Footer/Footer.module.scss
+++ b/components/common/Footer/Footer.module.scss
@@ -181,7 +181,7 @@
                 display: inline-block;
                 width: 35px;
                 height: 35px;
-                background: var(--white);
+                background: #454b4f;
                 border-radius: 50px;
                 margin-right: 20px;
                 padding: 7px;
