--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -309,6 +309,11 @@
   display: flex;
   align-items: center;
 }
+.clientProfileBox .clientProfileImg {
+  width: 70px;
+  border-radius: 50px;
+  overflow: hidden;
+}
 .clientFeedbackBox {
   color: var(--light-black);
   font-size: 16px;
