--- a/components/Teams/Teams.module.scss
+++ b/components/Teams/Teams.module.scss
@@ -140,6 +140,7 @@
                 padding: 5px;
                 width: 35px;
                 height: 35px;
+                transition: all .3s;
                 svg {
                     display: block;
                     color: #fff;
@@ -153,13 +154,17 @@
                 &.linkedin {
                     background-color: #0077b5;
                 }
+                &:hover {
+                    transform: translateY(-5px);
+                }
             }
         }
     }
     [class~=slick-dots] {
-        bottom: -45px;
+        bottom: -55px;
         li {
             button {
+                border-radius: 50px;
                 &::before {
                     font-size: 11px;
                     color: var(--primary-10);
@@ -168,9 +173,11 @@
             }
             &[class~=slick-active] {
                 button {
+                    border: 2px solid var(--primary);
                     &::before {
                         color: var(--primary);
-                        font-size: 14px;
+                        font-size: 12px;
+                        top: 1px;
                     }
                 }
             }
